--- a/public/pair.html
+++ b/public/pair.html
@@ -199,7 +199,7 @@
 
   <div class="container">
     <div class="logo">
-      <img src="https://raw.githubusercontent.com/Mayelprince/url/main/menun.jpg" alt="PRINCE MDX">
+      <img src="https://files.catbox.moe/pcb8td.jpg" alt="PRINCE MDX">
     </div>
 
     <h1>PRINCE MDX PAIR CODE</h1>
