--- a/public/pair.html
+++ b/public/pair.html
@@ -633,7 +633,7 @@
     
     <div class="container">
         <div class="logo">
-            <img src="https://files.giftedtech.top/file/gifted-md.jpg" alt="PRINCE-MDXI">
+            <img src="https://raw.githubusercontent.com/Mayelprince/url/main/menun.jpg" alt="PRINCE-MDXI">
         </div>
         
         <h1>PRINCE PAIR CODE</h1>
@@ -805,3 +805,4 @@
     </script>
 </body>
 </html>
+
