--- a/public/index.html
+++ b/public/index.html
@@ -1137,7 +1137,7 @@
             <div class="footer-column">
                 <h3>Stay Connected</h3>
                 <p class="footer-description">Join our community for updates and announcements.</p>
-                <a href="https://whatsapp.com/channel/0029Vb3hlgX5kg7G0nFggl0Y" class="btn btn-secondary" target="_blank" style="font-size: 0.85rem; padding: 0.75rem 1.25rem;">
+                <a href="https://whatsapp.com/channel/0" class="btn btn-secondary" target="_blank" style="font-size: 0.85rem; padding: 0.75rem 1.25rem;">
                     Join Channel <i class="fas fa-chevron-right"></i>
                 </a>
             </div>
@@ -1145,11 +1145,11 @@
         
         <div class="copyright">
             © <span id="currentYear"></span> Made with <i class="fas fa-heart heart"></i> by 
-            <a href="https://www.giftedtech.web.id" target="_blank">Gifted Tech</a>
+            <a href="https://princetechn.com" target="_blank">Prince Tech</a>
         </div>
     </footer>
 
-    <div id="rightClickMessage" class="glass-card">Action restricted by GiftedTech</div>
+    <div id="rightClickMessage" class="glass-card">Action restricted by PrinceTech</div>
 
     <script>
         // Create Particles
@@ -1239,4 +1239,5 @@
     </script>
 </body>
 </html>
+
 
